<resources>
    <string name="app_name">OneApp</string>
    <string name="btn_servicios">SERVICIOS</string>
    <string name="btn_portafolio">PORTAFOLIO</string>
    <string name="btn_acerca">ACERCA DE</string>
    <string name="btn_contacto">CONTACTO</string>
    <string name="btn_redes">REDES SOCIALES</string>

    <string name="btn_siguienteVista">Siguiente</string>

    <string name="hint_name">nombre</string>
    <string name="hint_email">correo electronico</string>
    <string name="hint_height">estatura(cm)</string>
    <string name="hint_key">clave</string>
    <string name="toggle_male">Masculino</string>
    <string name="toggle_female">Femenino</string>
    <string name="toggle_skip">Omitir</string>
    <string name="text_gender">Género:</string>
    <string name="text_terms">He leido y Acepto todos los terminos y Condiciones.</string>
    <string name="button_send">Enviar datos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>